Remove prop that prevents a Page Menu to wrap

--- a/packages/css/src/components/page-menu/page-menu.scss
+++ b/packages/css/src/components/page-menu/page-menu.scss
@@ -43,10 +43,6 @@
   justify-content: end;
 }
 
-.ams-page-menu--no-wrap {
-  flex-wrap: nowrap;
-}
-
 .ams-page-menu__item {
   &--secondary {
     @media screen and (not (min-width: $ams-breakpoint-medium)) {
